--- a/perfil/estilo.css
+++ b/perfil/estilo.css
@@ -26,6 +26,7 @@ body {
 }
 --*/
 /* titulos */
+
 .title{
 
   padding: 4px;
@@ -85,7 +86,7 @@ body {
 	padding: 20px;
 	float: left;
   width: 640px;                 /* Add this */
-  height: 920px;
+  height: 930px;
   background-color: #d4d4dc;
 }
 .content h1{
@@ -109,7 +110,7 @@ body {
 	padding: 20px;
 	float: right;
   width: 640px;                 /* Add this */
-  height: 920px;
+  height: 930px;
   background-color: #F5CF8E;
   margin-bottom: 30px;
 }
@@ -127,9 +128,14 @@ body {
 
 
 .username {
+  float: left;
+  
+  background-color: #fff;
+  border-radius: 30px;
   font-size: 18px;
   color: #555;
-  margin-top: 10px;
+ margin: 10px;
+ padding: 5px;
 }
 
 .comment {
@@ -139,10 +145,10 @@ body {
   background: transparent;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border: 5px solid #fff;
-  margin: 8px;
+  margin: 20px;
   overflow: hidden;
    width: 78%; 
-   height: 110px;
+   height: 100px;
    padding: 10px; 
    font-size: 14px;/* This is important */
 }
@@ -151,13 +157,13 @@ body {
 p {
   border-radius: 30px;
   margin: 20px;
-  padding: 15px;
-  width: 80%;
+  padding: 20px;
+  width: 85%;
   margin-bottom: 20px;
   background-color: #F5CF8E;
   border: 10px solid #d4d4dc;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  margin-left: 10%;
+  margin-left: 8%;
   margin-right: 0%; 
 
 }
@@ -226,7 +232,7 @@ p {
 .produto{
   width: 350px;
   height: 300px;
-  border-radius: 20px;
+  border-radius: 30px;
   background-color: #3c6388;
 }
 .buttonprod{
@@ -239,8 +245,8 @@ p {
   margin: 0 auto;
   border: 10px solid #F5CF8E;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  border-radius: 60px;
-  padding: 12px 16px;
+  border-radius: 50%;
+  padding: 10px 14px;
   cursor: pointer;
 }
 .buttonprod a{
@@ -267,7 +273,7 @@ p {
   
 }
 .social {
-  width: 80%;
+  width: 85%;
   padding: 24px;
   height: 130px;
   display: inline-flex;
@@ -277,7 +283,7 @@ p {
   justify-content: center;
   background-color: #F5CF8E;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  margin: 12px 10%;
+  margin: 12px 8%;
 }
 .social i {
   padding: 0px 10px;
@@ -322,7 +328,7 @@ p {
   transform: translate(0, -5);
 }
 .social i:nth-child(4) {
-  color:  #9b4980;
+  color:  #1e90ff;
   cursor: pointer;
   text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
   transition: all ease-in-out 150ms;
