--- a/css/orbita.css
+++ b/css/orbita.css
@@ -10,13 +10,17 @@
 	margin: 0 auto;
 	position: relative;
 	top: 0rem;
-	border: 20px solid #63ace5;
-	background-color: #d4d4dc;
+	border: 20px solid #4925b1;
+	background-image: url('../img/Fundo4.png');
+	background-size: 100%;
+	text-shadow: 0px 7px 10px rgba(0, 0, 0, 0.4);
+	background-position: center;
+	background-repeat: no-repeat;
 	box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 .ellipse-container .greeting {
-	color: #1d1e22;
+	color: #8438c7;
 	position: relative;
 	top: 20rem;
 	left: 1.9rem;
@@ -35,7 +39,7 @@
 	height: .3rem;
 	border-radius: 50%;
 	display: inline-block;
-	background-color: #395284;
+	background-color: #fff;
 	position: relative;
 	top: -0.65rem;
 	left: -5.05rem;
@@ -46,19 +50,20 @@
 	position: absolute;
 	top: 0;
 	border-style: solid;
+
 }
 
 .ellipse__outer--thin {
 	width: 100%;
 	height: 100%;
 	border-width: 1px;
-	border-color: rgba(9,56,62,.1);
+	border-color: rgb(132, 56, 199);
 	animation: ellipseOrbit 15s ease-in-out infinite;
 }
 
 .ellipse__outer--thin:after {
 	content: "";
-	background-image: url(../img/ellipse.png);
+	background-image: url(../img/ellipse-azul.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	top: 0;
@@ -66,25 +71,28 @@
 	bottom: 0;
 	right: 0;
 	position: absolute;
-	opacity: .3;
+	opacity: .5;
 }
 
 .ellipse__outer--thick {
 	width: 99.9%;
 	height: 99.9%;
-	border-color: #1d1e22 transparent;
+	border-color: #8438c7 transparent;
 	border-width: 5px;
 	transform: rotate(-45deg);
 	animation: ellipseRotate 15s ease-in-out infinite;
+	z-index: 1;
 }
 
 .ellipse__orbit {
 	width: 2.5rem;
 	height: 2.5rem;
 	border-width: 3px;
-	border-color: #1d1e22;
+	border-color: #8438c7;
 	top: 5rem;
 	right: 6.75rem;
+	z-index: 5;
+	box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 .ellipse__orbit:before {
@@ -93,13 +101,15 @@
 	height: 0.9rem;
 	border-radius: 50%;
 	display: inline-block;
-	background-color: #1d1e22;
+	background-color: #8438c7;
 	margin: 0 auto;
 	left: 0;
 	right: 0;
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
+	z-index: 4;
+	box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 @keyframes ellipseRotate {
