--- a/login/css/estilo.css
+++ b/login/css/estilo.css
@@ -6,11 +6,10 @@
   box-sizing: border-box;
 }
 body{
-  background:   #63ace5;
+  background-image: linear-gradient(180deg, rgb(68, 72, 255) 0%, rgb(33, 212, 253) 100%);
   font-family: "Audiowide";
   font-size: 16px;
   line-height: 1.3;
-
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -30,7 +29,7 @@ body{
   height: 75%;
   left: 10%;
   top: 5%;
-  background: #36333a;
+  background: #2d1444;
   border-radius: 25px;
   z-index: 2;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -94,9 +93,9 @@ body{
   height: 15%;
   left: 40%;
   bottom: -15%;
-  background: #656567;
-  -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
-  clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
+  background: #8438c7;
+  -webkit-clip-path: polygon(18% 0%, 80% 0%, 100% 100%, 0% 100%);
+  clip-path: polygon(18% 0%, 80% 0%, 100% 100%, 0% 100%);
   z-index: 1;
 }
 .part-2{
@@ -105,7 +104,7 @@ body{
   height: 10%;
   left: 30%;
   bottom: -25%;
-  background: #36333a;
+  background: #2d1444;
   border-radius: 10px;
   z-index: 2;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -225,8 +224,8 @@ body{
   position: relative;
   font-size: 14px;
   font-weight: bold;
-  color: #D6D9DC;
-  background-color: #36333a;
+  color: #FFFFFF;
+  background-color: #8438c7;
   margin: 15px 0 0;
   border: 10px solid #d4d4dc;
   box-shadow: 0 0 5px rgba(0,0,0,1);
@@ -246,10 +245,11 @@ body{
   border-radius: 3px;
   padding: 5px;
   font-family: "Arial Narrow", cursive;
+  font-size: 16px;
   margin:0 auto;
 }
 strong{
-  color: #00bdec;
+  color: #8438c7;
 }
 
 .button:hover {
