--- a/login/css/cad.css
+++ b/login/css/cad.css
@@ -4,6 +4,16 @@
     padding: 0px;
     box-sizing: border-box;
 }
+select{
+    background-color: #FFFFFF;
+    border: 8px solid #D6D9DC;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+    border-radius: 3px;
+    width: 100%;
+    padding: 7px;
+    margin: 0;
+    font-size: 14px;
+}
 body{
     background:   #63ace5;
     font-family: "Audiowide";
@@ -173,6 +183,7 @@ body{
   margin: 0;
   font-size: 14px;
 }
+
 .form-row label {
   margin-bottom: 15px;
   font-size: 18px;
