--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,17 +4,23 @@ html{
   font-size: 70%;
 }
 html * {
+  -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
  margin: 0;
  padding: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
- box-sizing: border-box;
 }
 
 body {
-  background-image: linear-gradient(180deg, rgb(68, 72, 255) 0%, rgb(33, 212, 253) 100%);
+  background-image: linear-gradient(to top, #005bea 0%,  #00c6fb 100%);
   font-family: "Audiowide";
   font-size: 100%;
+}
+p{
+  font-family: "Arial Narrow",cursive;
 }
 /*
 body::-webkit-scrollbar{
@@ -32,7 +38,7 @@ header {
  text-align: center;
  padding-top: 20px;
  padding-bottom: 80px;
- background: none;
+ background: url(../img/papper2.png);
  width: 100%;
  height: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -68,7 +74,7 @@ header {
 }
 .button:hover{
   transition: .8s;
-  background-color: #424fff;
+  background-color: #00c6fb;
 }
 /*----fim botão log/cad---*/
 
@@ -119,15 +125,16 @@ header {
 
 /*---efeitoneon*/
 #textomid{
+  font-size: 26px;
   color: #555;
   text-align: center;
-  margin-top: 6%;
+  margin-top: 1%;
   margin-bottom: 8%;
 }
 
 img#caixa{
   position: absolute;
-  margin-top: 8%;
+  margin-top: 2%;
   left: 50.1%;
   transform: translate(-50%, -50%);
 
@@ -139,41 +146,170 @@ img#caixa{
 
 .Interface {  
   justify-content: center;
-  background-color: #FFFFFF;
+  background: url(../img/papper2.png);
   color: #fff;
-  max-width: 93%;
-  margin: 5% auto;
+  max-width: 90%;
+  margin: 8% auto;
   padding: 4%;
   border-radius: 30px;
-  border: 20px solid #5fc7ea;
+  border: 20px solid #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 
-/* Main column */
-.main-conteudo { 
-  color: #555;
-  margin: 1% auto;
-  font-size: 18px;
-  padding: 25px;
-}
-.main-conteudo h2{
-  text-align: center;
+/* Top Container */
+
+.top-container {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-areas:
+        'backimage backimage backimage'
+        'first second third';
 }
 
-/* Fake imagem, just for this example */
-.fakeimg {
-  background-color: #adcbe3;
-  width: 100%;
+/* Showcase */
+
+.backimage {
+    border: 5px solid #444;
+    grid-area: backimage;
+    min-height: 400px;
+    background: url(../img/3.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    box-shadow: var(--shadow);
+    border-radius: 20px;
+}
+
+/* Top Box */
+
+.program-lang {
+    background: var(--primary);
+    color: var(--light);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    box-shadow: var(--shadow);
+    padding: 4rem;
+    border-radius: 20px;
+}
+
+.program-lang h4 {
+    font-size: 1.5rem;
+}
+
+.program-lang .lang-name {
+    font-size: 2.5rem;
+    text-align: center;
+}
+
+.first {
+
+    border: 5px solid #444;
+    grid-area: first;
+}
+
+.second {
+  border: 5px solid #444;
+    grid-area: second;
+}
+
+.third {
+  border: 5px solid #444;
+    grid-area: third;
+}
+
+/* Boxes */
+
+.skills {
+    padding: 3rem;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+.skill {
+    font-size: 16px;
+    padding: 3rem 3rem;
+    border: 5px solid #444;
+    background: #8438c7;
+    text-align: center;
+    box-shadow: var(--shadow);
+    border-radius: 20px;
+    color: var(--light);
+}
+
+/* Info */
+
+.vision {
+  text-align: justify;
+    font-size: 16px;
+  margin-bottom: 20px;
+    border: 5px solid #444;
+    background: var(--primary);
+    color: var(--light);
+    box-shadow: var(--shadow);
+    display: grid;
+    grid-gap: 30px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 3rem;
+    border-radius: 20px;
+}
+
+.vision img {
+    border-radius: 20px;
+}
+
+/* Portfolio */
+
+.gallery {
+   background: #8438c7;
   padding: 20px;
-  border: 10px solid #d4d4dc;
-  border-radius: 60px;
-   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 20px;
+     border: 5px solid #444;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
-/*contato*/
+.gallery img {
+    width: 100%;
+    box-shadow: var(--shadow);
+    border-radius: 20px;
+}
 
+:root {
+    --primary: #ab987a;
+    --blood: #ff533d;
+    --dark: #0f1626;
+    --light: #fff;
+    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
+}
+.btn {
+    font-family: Arial;
+    font-size: 14px;
+    margin: 20px auto;
+    background: var(--dark);
+    color: var(--light);
+    padding: 0.6rem 1.3rem;
+    text-decoration: none;
+    border: 5px solid #fff;
+     box-shadow: 0px 0px 10px rgba(0,0,0,1);
+    border-radius: 20px;
+}
 
+.btn:hover {
+    background: #8438c7;
+    transition: 0.5s;
+}
+.port{
+  color: #444;
+  margin: 20px auto;
+}
 
 /* Back to top button style */
 .to-top {
@@ -204,16 +340,16 @@ img#caixa{
 /* Footer */
 .footer{
   text-align: center;
-  background-color: #23cafd;
+  background: url(../img/papper2.png);
   font-size: 16px;
-  padding: 2em;
+  padding: 1em;
 
 }
 #copy{
 
   margin-top: 1%;
   text-align: center;
-  color: #fff;
+  color: #555;
   
 }
 
@@ -221,11 +357,11 @@ img#caixa{
 .social {
   padding: 12px;
   display: inline-flex;
-   border: 12px solid  #5fc7ea;
+   border: 5px solid  #444;
    border-radius: 60px;
   align-items: center;
   justify-content: center;
-  background-color: #d4d4dc;
+  background-color: none;
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
     margin-bottom: 20px;
 }
