--- a/css/passeio.css
+++ b/css/passeio.css
@@ -13,7 +13,7 @@ html * {
   box-sizing: border-box;
 }
 body {
-  background-image: linear-gradient(180deg, rgb(68, 72, 255) 0%, rgb(33, 212, 253) 100%);
+  background-image: linear-gradient(to top, #005bea 0%,  #00c6fb 100%);
  background-size: cover;
  font-family: "Audiowide";
  font-size: 100%;
@@ -23,7 +23,7 @@ body {
 header {
  padding-top: 20px;
  padding-bottom: 20px;
- background:none;
+ background: url(../img/papper2.png);
  width: 100%;
  height: auto;
  box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -51,7 +51,7 @@ p{
     animation: round 16s infinite;
     opacity: 0;
     width: 100%;
-    height: 550px;
+    height: auto;
     background-size: cover;
   }
   
@@ -146,12 +146,26 @@ img#caixa{
 }
 
 /*------Slide Lojas & Perfil-----*/
+.whois{
+  position: relative;
+  margin: 100px auto;
+  width: 90%;
+  border-radius: 60px;
+  background: url(../img/papper2.png) repeat;
+  border: 20px solid  #fff;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  height: auto;
+}
+
 
 .container{
+  margin: 40px auto;
+  width: 95%;
   border-radius: 60px;
-  background-color: #FFFFFF;
-  border: 20px solid  #22cffd;
+  background: none;
+  border: 5px solid #444;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  height: auto;
 }
 
 .post-slide{
@@ -237,6 +251,7 @@ img#caixa{
   }
 
   .post-slide .post-author{
+    background-color: #B2D6FF;
     width: 75px;
     height: 75px;
     border-radius: 50%;
@@ -287,34 +302,36 @@ img#caixa{
 /* produtos*/
 
 .containerprod {
-  display: flex;
+  display: block;
   justify-content: center;
-  background-color: #FFFFFF;
-  background-size: 16px 16px;
+  background: none;
   color: #555;
-  max-width: 92.6%;
-  margin: 2% auto 5.5%;
+  max-width: 92%;
+  margin: 50px auto;
   border-radius: 60px;
-  padding: 1% 4%;
-  border: 20px solid #22cffd;
+ 
+  border: 5px solid #444;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 
 }
 
 .example {
-
   display: flex;
+  border: 10px solid none;
   justify-content: space-around;
-  
-  width: 1100px;
-  margin: 50px -20px;
+  padding: 0px;
+  max-width: 96%;
+  height: 520px;
+  margin: 20px auto;
   background: none;
 }
 
 .item img {
+  margin: 4px auto;
   display: block;
-
-  height: 380px;
+  padding: 0px;
+  width: 96%;
+  height: 340px;
   background-color:  #d4d4dc;
   border-radius: 20px;
   border: 10px ridge #22cffd;
@@ -328,10 +345,10 @@ img#caixa{
 }
 
 #text{
-  margin-top: 5px;
+  margin: 0 auto;
   padding: 10px;
-  width: 340px;
-  height: 155px;
+  width: 95%;
+  height: 150px;
   background-color: #d4d4dc;
   border-radius: 30px;
   text-align: center;
@@ -402,16 +419,16 @@ img#caixa{
 /*---footer ---*/
 .footer{
   text-align: center;
-  background-color:  #22cffd;
+  background: url(../img/papper2.png);
   font-size: 16px;
-  padding: 2em;
+  padding: 1em;
 
 }
 #copy{
 
   margin-top: 1%;
   text-align: center;
-  color: #d4d4dc;
+  color: #555;
   
 }
 
@@ -419,11 +436,11 @@ img#caixa{
 .social {
   padding: 10px;
   display: inline-flex;
-   border: 12px solid  #2baafd;
+   border: 5px solid  #444;
    border-radius: 60px;
   align-items: center;
   justify-content: center;
-  background-color: #d4d4dc;
+  background-color: none;
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
