--- a/login/css/cad.css
+++ b/login/css/cad.css
@@ -15,7 +15,7 @@ select{
     font-size: 14px;
 }
 body{
-    background:   #63ace5;
+    background-image: linear-gradient(180deg, rgb(68, 72, 255) 0%, rgb(33, 212, 253) 100%);
     font-family: "Audiowide";
     font-size: 16px;
     line-height: 1.3;
@@ -30,7 +30,7 @@ body{
     display: block;
     margin-top: -5%;
     width: 80%;
-    height: 1130px;
+    height: 1000px;
     background: none;
 }
 .outter-part{
@@ -39,7 +39,7 @@ body{
     height: 75%;
     left: 10%;
     top: 5%;
-    background: #36333a;
+    background: #2d1444;
     border-radius: 25px;
     z-index: 2;
     box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -103,7 +103,7 @@ body{
     height: 15%;
     left: 40%;
     bottom: -15%;
-    background: #656567;
+    background: #8438c7;
     -webkit-clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
     clip-path: polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%);
     z-index: 1;
@@ -114,7 +114,7 @@ body{
     height: 10%;
     left: 30%;
     bottom: -25%;
-    background: #36333a;
+    background: #2d1444;
     border-radius: 10px;
     z-index: 2;
     box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -125,7 +125,7 @@ body{
     height: 85%;
     left: 2.5%;
     top: 5%;
-    background: #1d1e22;
+    background: #2d1444;
     z-index: 2;
 }
 .gif-part{
@@ -182,6 +182,7 @@ body{
   padding: 7px;
   margin: 0;
   font-size: 14px;
+  font-family: 'Arial Black',cursive;
 }
 
 .form-row label {
@@ -202,27 +203,25 @@ body{
   font-size: 15px;
 }
 .button {
-    margin-top: 20px;
-    margin-bottom: 5px;
+    position: relative;
     font-size: 14px;
     font-weight: bold;
     color: #D6D9DC;
-    background-color: #36333a;
-    margin-left: 36%;
-
-    border: 10px solid  #d4d4dc;
+    background-color: #8438c7;
+    margin: 10px 36.9%;
+  
+    border: 10px solid #d4d4dc;
     box-shadow: 0px 0px 5px rgba(0,0,0,1);
     border-radius: 10px;
-
+  
     padding: 15px 40px;
     cursor: pointer;
-}
-
-.button:hover {
-    color: #36333a;
+  }
+  .button:hover {
+    color: #8438c7;
     background-color: #d4d4dc;
     transition: .5s;
-}
+  }
 .div-ajust{
     flex-direction: column;
 }
@@ -238,5 +237,34 @@ body{
 }
 
 
-
-
+/*---botão voltar---*/
+.buttonback {
+    transition: .5s;
+    position: absolute;
+    display: inline-block;
+    z-index: 3;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: #8438c7;
+    margin: 13px;
+    margin-right: 91%;
+    border: 10px solid  #8438c7;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
+    border-radius: 60px;
+    padding: 15px 15px;
+    cursor: pointer;
+  }
+  .buttonback a{
+    transition: .8s;
+    color: #fff;
+    font-weight:bold;
+    font-size:14px;
+    text-align: center;
+    text-decoration:none;
+    display:block;
+    position:relative;
+  }
+  .buttonback:hover{
+    transition: .8s;
+    background-color: #424fff;
+  }
