--- a/login/css/estilo.css
+++ b/login/css/estilo.css
@@ -20,7 +20,7 @@ body{
   display: block;
   margin-top: -4%;
   width: 80%;
-  height: 800px;
+  height: 1200px;
   background: none;
 }
 .outter-part{
@@ -185,6 +185,7 @@ body{
 }
 
 .form-row label {
+  margin-top: 15px;
   margin-bottom: 15px;
   font-size: 18px;
 }
@@ -205,13 +206,11 @@ body{
 }
 .button {
   position: relative;
-  margin-top: 20px;
-  margin-bottom: 5px;
   font-size: 14px;
   font-weight: bold;
   color: #D6D9DC;
-  background-color: #36333a;
-  margin-left: 37%;
+  background-color: #8438c7;
+  margin: 10px 38%;
 
   border: 10px solid #d4d4dc;
   box-shadow: 0px 0px 5px rgba(0,0,0,1);
@@ -220,6 +219,12 @@ body{
   padding: 15px 40px;
   cursor: pointer;
 }
+.button:hover {
+  color: #8438c7;
+  background-color: #d4d4dc;
+  transition: .5s;
+}
+
 .btn-info {
   position: relative;
   font-size: 14px;
@@ -232,6 +237,11 @@ body{
   border-radius: 10px;
   padding: 15px 40px;
   cursor: pointer;
+}
+.btn-info:hover {
+  color: #8438c7;
+  background-color: #d4d4dc;
+  transition: .5s;
 }
 .texta-info{
   display: block;
@@ -252,15 +262,6 @@ strong{
   color: #8438c7;
 }
 
-.button:hover {
-  color: #36333a;
-  background-color: #d4d4dc;
-  transition: .5s;
-}
-
-.button:active {
-  background-color: #407FC7;
-}
 .cad{
   margin-top: 20px;
   text-align: center;
@@ -286,4 +287,46 @@ strong{
 #h1-contato{
   position: relative;
   top: 40px;
+}
+
+.buttonback {
+  transition: .5s;
+  position: absolute;
+  display: inline-block;
+  z-index: 3;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 13px;
+  margin-right: 91%;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+  padding: 15px 15px;
+  cursor: pointer;
+}
+.buttonback a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.buttonback:hover{
+  transition: .8s;
+  background-color: #424fff;
+}
+
+.article-image {
+  background-color: #B2D6FF;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border: 10px solid #d4d4d4;
+  border-radius: 20%;
+  margin: 10px auto;
+  width: 250px;
+  height: 180px;
+  cursor: pointer;
 }
