--- a/login/css/cad.css
+++ b/login/css/cad.css
@@ -239,32 +239,30 @@ body{
 
 /*---botão voltar---*/
 .buttonback {
-    transition: .5s;
-    position: absolute;
-    display: inline-block;
-    z-index: 3;
-    font-size: 14px;
-    font-weight: bold;
-    background-color: #8438c7;
-    margin: 13px;
-    margin-right: 91%;
-    border: 10px solid  #8438c7;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1);
-    border-radius: 60px;
-    padding: 15px 15px;
-    cursor: pointer;
-  }
-  .buttonback a{
-    transition: .8s;
-    color: #fff;
-    font-weight:bold;
-    font-size:14px;
-    text-align: center;
-    text-decoration:none;
-    display:block;
-    position:relative;
-  }
-  .buttonback:hover{
-    transition: .8s;
-    background-color: #424fff;
-  }
+  transition: .5s;
+  position: fixed;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 10px -5%;
+  right: 80px;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+   padding: 10px 10px;
+  cursor: pointer;
+}
+.buttonback a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.buttonback:hover{
+  transition: .8s;
+  background-color: #d4d4d4;
+}
