--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,16 +22,6 @@ body {
 p{
   font-family: "Arial Narrow",cursive;
 }
-/*
-body::-webkit-scrollbar{
-  position: absolute;
-  width: 10px;
-  background: rgba(14, 106, 199, 0.51);
-}
-body::-webkit-scrollbar-thumb{
-  border-radius: 10px;
-  background: #8438c7;
-}*/
 
 header {
  position: relative;
@@ -46,20 +36,18 @@ header {
 }
 
 /*botão log|cad*/
-
 .button {
-  transition: .8s;
-  position: relative;
-  display: inline-block;
-  z-index: 3;
+  transition: .5s;
+  position: fixed;
   font-size: 14px;
   font-weight: bold;
-  background-color: rgb(132, 56, 199);
-  margin: -6px -6px -6px 90%;
-  border: 10px solid  rgb(132, 56, 199);
+  background-color: #8438c7;
+  margin: 0px -5%;
+  right: 80px;
+  border: 10px solid  #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
-  padding: 15px 15px;
+   padding: 10px 10px;
   cursor: pointer;
 }
 .button a{
@@ -74,7 +62,36 @@ header {
 }
 .button:hover{
   transition: .8s;
-  background-color: #00c6fb;
+  background-color: #d4d4d4;
+}
+
+.buttonperfil {
+  transition: .5s;
+  position: fixed;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 7% -5%;
+  right: 80px;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+  padding: 10px 10px;
+  cursor: pointer;
+}
+.buttonperfil a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.buttonperfil:hover{
+  transition: .8s;
+  background-color: #d4d4d4;
 }
 /*----fim botão log/cad---*/
 
@@ -181,8 +198,8 @@ img#caixa{
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    box-shadow: var(--shadow);
     border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
 /* Top Box */
@@ -208,17 +225,19 @@ img#caixa{
 }
 
 .first {
-
+     box-shadow: 0px 0px 10px rgba(0,0,0,1);
     border: 5px solid #444;
     grid-area: first;
 }
 
 .second {
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border: 5px solid #444;
     grid-area: second;
 }
 
 .third {
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border: 5px solid #444;
     grid-area: third;
 }
@@ -233,12 +252,12 @@ img#caixa{
 }
 
 .skill {
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
     font-size: 16px;
     padding: 3rem 3rem;
     border: 5px solid #444;
-    background: #8438c7;
+    background: var(--primary);
     text-align: center;
-    box-shadow: var(--shadow);
     border-radius: 20px;
     color: var(--light);
 }
@@ -247,12 +266,12 @@ img#caixa{
 
 .vision {
   text-align: justify;
-    font-size: 16px;
+    font-size: 18px;
   margin-bottom: 20px;
     border: 5px solid #444;
     background: var(--primary);
     color: var(--light);
-    box-shadow: var(--shadow);
+     box-shadow: 0px 0px 10px rgba(0,0,0,1);
     display: grid;
     grid-gap: 30px;
     grid-template-columns: repeat(2, 1fr);
@@ -267,7 +286,8 @@ img#caixa{
 /* Portfolio */
 
 .gallery {
-   background: #8438c7;
+   box-shadow: 0px 0px 10px rgba(0,0,0,1);
+   background: var(--primary);
   padding: 20px;
   border-radius: 20px;
      border: 5px solid #444;
@@ -329,7 +349,7 @@ img#caixa{
   height: 50px;
   line-height: 50px;
   border-radius: 5px;
-   background-color:  #49657b;
+   background-color: #8438c7;
   opacity: 0.5;
   transition: 0.3s;
 }
