--- a/css/passeio.css
+++ b/css/passeio.css
@@ -6,6 +6,10 @@ html{
   font-size: 70%;
 }
 html * {
+  -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
   margin: 0;
   padding: 0;
   -webkit-font-smoothing: antialiased;
@@ -32,6 +36,67 @@ header {
 p{
   font-family: "Arial Narrow",cursive;
 }
+/*botão log|cad*/
+.button {
+  transition: .5s;
+  position: fixed;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 0px -5%;
+  right: 80px;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+   padding: 10px 10px;
+  cursor: pointer;
+  z-index: 8;
+}
+.button a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.button:hover{
+  transition: .8s;
+  background-color: #d4d4d4;
+}
+
+.buttonperfil {
+  transition: .5s;
+  position: fixed;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 7% -5%;
+  right: 80px;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+  padding: 10px 10px;
+  cursor: pointer;
+    z-index: 8;
+}
+.buttonperfil a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.buttonperfil:hover{
+  transition: .8s;
+  background-color: #d4d4d4;
+}
+/*----fim botão log/cad---*/
 /*---Slider---*/
 .containerslide {
     top: -15px;
@@ -370,7 +435,7 @@ img#caixa{
    border: 10px solid #d4d4dc;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
-  padding: 8px 0px;
+  padding: 10px 10px;
   cursor: pointer;
 }
 .buttonprod a{
@@ -408,7 +473,7 @@ img#caixa{
   height: 50px;
   line-height: 50px;
   border-radius: 5px;
-  background-color:  #49657b;
+  background-color:  #8438c7;
   opacity: 0.5;
   transition: 0.3s;
 }
@@ -444,7 +509,7 @@ img#caixa{
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
-i {
+.social i {
   padding: 0px 10px;
 }
 
