--- a/css/passeio.css
+++ b/css/passeio.css
@@ -43,8 +43,8 @@ p{
   font-size: 14px;
   font-weight: bold;
   background-color: #8438c7;
-  margin: 0px -5%;
-  right: 80px;
+   margin: 0px;
+  right: 20px;
   border: 10px solid  #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
@@ -73,8 +73,8 @@ p{
   font-size: 14px;
   font-weight: bold;
   background-color: #8438c7;
-  margin: 7% -5%;
-  right: 80px;
+   margin: 7% -0%;
+  right: 20px;
   border: 10px solid  #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
