--- a/login/css/cad.css
+++ b/login/css/cad.css
@@ -244,8 +244,8 @@ body{
   font-size: 14px;
   font-weight: bold;
   background-color: #8438c7;
-  margin: 10px -5%;
-  right: 80px;
+  margin: 20px;
+  right: 5px;
   border: 10px solid  #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
