--- a/login/css/estilo.css
+++ b/login/css/estilo.css
@@ -295,8 +295,8 @@ strong{
   font-size: 14px;
   font-weight: bold;
   background-color: #8438c7;
-  margin: 10px -5%;
-  right: 80px;
+  margin: 20px;
+  right: 5px;
   border: 10px solid  #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 60px;
