--- a/perfil/estilo.css
+++ b/perfil/estilo.css
@@ -7,25 +7,54 @@
 body {
 
 	color: #fff;
-  background-color: #717d89;
+  background-image: linear-gradient(to top, #005bea 0%,  #00c6fb 100%);
   
     font-family: "Audiowide";
   font-size: 100%;
 }
+
+.buttonback {
+  transition: .5s;
+  position: fixed;
+  font-size: 14px;
+  font-weight: bold;
+  background-color: #8438c7;
+  margin: 0px;
+  left: 20px;
+  border: 10px solid  #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 60px;
+  padding: 10px 10px;
+  cursor: pointer;
+}
+.buttonback a{
+  transition: .8s;
+  color: #fff;
+  font-weight:bold;
+  font-size:14px;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+.buttonback:hover{
+  transition: .8s;
+  background-color: #d4d4d4;
+}
+
+
 .page {
   width: 100%;
   margin: 0 auto;
   padding: 20px 20px;
 }
-
-/*--
-.container {
-  overflow: hidden;
-  background-color: red;
-   margin: 10px 10px;
+:root {
+    --primary: #ab987a;
+    --blood: #ff533d;
+    --dark: #0f1626;
+    --light: #fff;
+    --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
 }
---*/
-/* titulos */
 
 .title{
 
@@ -36,7 +65,7 @@ body {
   color: #555;
   background-color: none;
   border-radius: 60px;
-  border: 10px solid #d4d4dc;
+  border: 10px solid #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
  
   font-size: 18px;
@@ -47,9 +76,9 @@ body {
   text-align: center;
   margin-left: 0%;
   color: #555;
-  background-color: #d4d4dc;
+  background-color: none;
   border-radius: 60px;
-  border: 10px solid #d4d4dc;
+  border: 10px solid #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
  
   font-size: 18px;
@@ -58,7 +87,7 @@ body {
 
 /*imagens*/
 .article-image {
-  background-color: #B2D6FF;
+  background-color: #d4d4dc;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border: 15px outset #fff;
   border-radius: 50%;
@@ -81,10 +110,10 @@ body {
 
 .dados{
   position: relative;
-  border: 10px solid  #d4d4dc;
+  border:5px solid  #fff;
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
    border-radius: 30px;
-  background-color: #F5CF8E;
+  background: var(--primary);
   width: 85%;
   height: auto;
   margin: 15px auto;
@@ -95,7 +124,7 @@ body {
   text-align: center;
   width: 30%;
   margin: 20px;
-  background-color:  #F5CF8E;
+  background-color: none ;
   font-size: 18px;
   padding: 5px;
 }
@@ -115,14 +144,15 @@ body {
 
 /*colunas*/
 .content {
-	border: 20px solid  #4b86b4;
+	border: 20px solid  #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 	border-radius: 30px;
 	padding: 20px;
 	float: left;
   width: 640px;                 /* Add this */
-  height: 1058px;
-  background-color: #d4d4dc;
+  height: auto;
+  background: url(../img/papper2.png);
+  margin: 20px auto;
 }
 .content h1{
   font-size: 22px;
@@ -132,32 +162,32 @@ body {
   text-align: center;
   margin-left: 20%;
   color: #fff;
-  background-color:#F5CF8E;
+  background: var(--primary);
   border-radius: 60px;
-  border: 10px solid #d4d4dc;
+  border: 10px solid #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 .content2 {
 	margin-left: 0%;
-	border: 20px solid #4b86b4;
+	border: 20px solid #fff;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 	border-radius: 30px;
 	padding: 20px;
 	float: right;
   width: 640px;                 /* Add this */
-  height: 1058px;
-  background-color: #F5CF8E;
-  margin-bottom: 30px;
+  height: auto;
+  background: url(../img/papper2.png);
+  margin: 20px auto;
 }
 .columnpub {
   display: block;
  text-align: justify;
   width: 100%;
-  margin: 20px 0px;
+  margin: 26px 0px;
   height: auto;
-  background-color: #B2D6FF;    /* Medium blue */
+  background: var(--primary); 
   border-radius:30px;
-  border: 10px solid #FFF;
+  border: 5px solid #FFF;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
 }
 
@@ -174,8 +204,8 @@ body {
 }
 
 .comment {
+  color: #fff;
   text-align: left;
-  color: #555;
   border-radius: 30px;
   background: transparent;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
@@ -191,30 +221,32 @@ body {
 /*--P--*/
 
 
-#block1{
-  margin-top: 15px;
-  color: #555;
-  background-color:#B2D6FF;  
-  margin-left: 40%; 
-  text-align: justify;
-  border: 10px solid #d4d4dc;
-    box-shadow: 0px 0px 10px rgba(0,0,0,1);
-}
 
 /*--Rodapé--*/
 .footer {
    box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  border: 20px solid  #4b86b4;
+  border: 20px solid  #8438c7;
   margin: 20px auto;
 	clear: both;
   width: 95%;   
-  height: 500px;
-  background-color: #d4d4dc;
+  height: 600px;
+  background: url(../img/papper2.png);
   border-radius: 30px; 
+}
+.container h3{
+  color: #444;
+  border-radius: 30px;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  text-align: center;
+  width: 30%;
+  border: 10px solid #fff;
+  margin: 20px auto;
+  background-color: none ;
+  font-size: 18px;
+  padding: 8px;
 }
 
 .row{
-
   border-radius: 60px;
   margin-left: 5px;
     margin-top: 0px;
@@ -250,6 +282,7 @@ body {
   right: 7px;
 }
 
+/*descrição*/
 
 
 /*BOTÃO DE ADICIONAR PRODUTO*/
@@ -257,7 +290,7 @@ body {
   width: 350px;
   height: 300px;
   border-radius: 30px;
-  background-color: #3c6388;
+   background: var(--primary); 
 }
 .buttonprod{
   top: 8px;
@@ -265,9 +298,9 @@ body {
   display:inline-block;
   z-index: 3;
   font-weight: bold;
-  background-color: #F5CF8E;
+  background-color: #d4d4dc;
   margin: 0 auto;
-  border: 10px solid #F5CF8E;
+  border: 10px solid #8438c7;
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
   border-radius: 50%;
   padding: 10px 14px;
@@ -283,10 +316,37 @@ body {
 }
 
 .buttonprod:hover{
-   border: 10px solid #d4d4dc;
+  background: #8438c7;
   transition: .6s;
 }
 
+.buttondesc{
+  top: 8px;
+  position: relative;
+  display:inline-block;
+  z-index: 3;
+  font-weight: bold;
+  background-color: #d4d4dc;
+  margin: 0 auto;
+  border: 10px solid #8438c7;
+  box-shadow: 0px 0px 10px rgba(0,0,0,1);
+  border-radius: 50%;
+  padding: 10px 14px;
+  cursor: pointer;
+}
+.buttondesc a{
+  color: #fff;
+  font-weight:bold;
+  text-align: center;
+  text-decoration:none;
+  display:block;
+  position:relative;
+}
+
+.buttondesc:hover{
+  background: #8438c7;
+  transition: .6s;
+}
 
 /*SOCIAL BOTÃO*/
 #copy{
@@ -305,9 +365,9 @@ body {
   border-radius: 30px;
   
   justify-content: center;
-  background-color: #F5CF8E;
+  background: var(--primary); 
   box-shadow: 0px 0px 10px rgba(0,0,0,1);
-  margin: 6px 7.5%;
+  margin: 8px 7.5%;
 }
 .social i {
   padding: 0px 10px;
@@ -361,4 +421,7 @@ body {
   margin-top: -10px;
   text-shadow: 0px 16px 10px rgba(0, 0, 0, 0.3);
   transform: translate(0, -8);
+}
+h6{
+  font-family: Arial;
 }
